--- a/FinalReport.Rnw
+++ b/FinalReport.Rnw
@@ -26,6 +26,7 @@ library(ggmap)
 library(plyr)
 library('raster')
 library(maptools)
+library('XML')
 @
 
 \title{STAT 585X - Final Project - Report \\ Yey to web scrapping, big data at no storage cost \\ Changes in cultivated cropland soil in Iowa }
@@ -416,7 +417,7 @@ loc.newcoords <- project(cbind(add.poly.coords[,2],add.poly.coords[,1]), proj = 
 
 We extract the pixel count information available in the CDL data for the points in the desired region, for each year of interest. We present summaries for all the crop categories (corn, soybean, etc), by year in the following tables. 
 
-<<results>>=
+<<results,warning=FALSE,message=FALSE>>=
 
 # ?cellFromXY
 # cellFromXY
@@ -448,17 +449,20 @@ codes <- as.data.frame(codes[-c(1:9,266:316),1:2])
 names(codes) <-  c("code","class")
 #head(codes)
 
+
+
 ## the problem here is to merge two data frames of different sizes, by one column
 ## the column in one data frame to merge by is a subset of the corresponding column in the second data frame
 ## I read on join function and on its attributes, seems that
 ## join(codes, pts, type="right") does it but the second column of characters is converted in NAs...why?
 
-pts <- as.data.frame(cdl.pts3[-which(is.na(cdl.pts3))])
-names(pts) <- "code"
-join(codes, pts, by="code") -> res
-res[match(pts[,"code"],res[,"code"]),] -> res2
-table(res2[,"class"])/ nrow(pts) *100
+#pts <- as.data.frame(cdl.pts3[-which(is.na(cdl.pts3))])
+#names(pts) <- "code"
+#join(codes, pts,by="code") -> res
+#res[match(pts[,"code"],res[,"code"]),] -> res2
+#table(res2[,"class"])/ nrow(pts) *100
 
+codes[,"class"] <- as.character(codes[,"class"]) ###keeping on getting zeros bc table is not defined function...arghhhhh, they are nto character strings
 
 results <- function(x){
 pts <- as.data.frame(x[-which(is.na(x))])
@@ -470,14 +474,109 @@ return (table(res2[,"class"])/ nrow(pts) *100)
 
 ## the next problem would be to combine all the years cdl.pts into one data frame
 
-pts37 <- cbind(cdl.pts3, cdl.pts4, cdl.pts5,cdl.pts6, cdl.pts7)
+pts37 <- as.data.frame(cbind(cdl.pts3, cdl.pts4, cdl.pts5,cdl.pts6, cdl.pts7))
 
-res <- apply(pts37,2,results)   ###or alply
+d <- apply(pts37,2,results)   ###or alply
+
+laply(d,length)
+
+##let's try to bring all the years to same number of crop categoris by imputing NA for the years where a crop is missing
+#cropmaxno <- max(laply(d,length))
+
+allcrops <- unlist(llply(d, function(x) names(x)))
+cropmaxno <- length(unique(allcrops))
+
+laply(d,function(x) names(x) <- unique(allcrops))  ## doent do it automatically
+
+
+###this function should work!!!!!!!!
+llply(d, function(x) {
+    for (i in 1:cropmaxno)
+    if (length(grep(unique(allcrops)[i],names(x)))<1) {
+      x <- c(x, NA)
+      names(x)[i] <- unique(allcrops)[i]
+    }       
+})
+## the problem is that we cannot assign the changes to each element
+
+##this should do it
+fxn <- function(data) {
+  for (x in 1:length(data)) {
+    for (i in 1:cropmaxno)
+      if (length(grep(unique(allcrops)[i],names(data[[x]])))<1) {
+       data[[x]] <- c(data[[x]], NA)
+       names(data[[x]])[i] <- unique(allcrops)[i]
+      }  
+    paste("change number",data)
+  }
+return(data)
+}
+
+fxn(d) -> newd
+
+##it works, except for the last year, where the categories are developed, developed open space, developed etc...
+##the grep function fails because developed is subset ...need to match exactly...
+
+
+
+for (i in 1:cropmaxno)
+    if (length(grep(unique(allcrops)[i],names(d[[1]])))<1) {
+      d[[1]] <- c(d[[1]], NA)
+      names(d[[1]])[i] <- unique(allcrops)[i]
+    } 
+
+for (i in 1:cropmaxno)
+    if (length(grep(unique(allcrops)[i],names(d[[2]])))<1) {
+      d[[2]] <- c(d[[2]], NA)
+      names(d[[2]])[i] <- unique(allcrops)[i]
+    } 
+
+for (i in 1:cropmaxno)
+    if (length(grep(unique(allcrops)[i],names(d[[3]])))<1) {
+      d[[3]] <- c(d[[3]], NA)
+      names(d[[3]])[i] <- unique(allcrops)[i]
+    } 
+
+for (i in 1:cropmaxno)
+    if (length(grep(unique(allcrops)[i],names(d[[4]])))<1) {
+      d[[4]] <- c(d[[4]], NA)
+      names(d[[4]])[i] <- unique(allcrops)[i]
+    } 
+for (i in 1:cropmaxno)
+    if (length(grep(unique(allcrops)[i],names(d[[5]])))<1) {
+      d[[5]] <- c(d[[5]], NA)
+      names(d[[5]])[i] <- unique(allcrops)[i]
+    } 
+
+cbind(as.data.frame(d[[1]]),as.data.frame(d[[2]]),,as.data.frame(d[[3]]),as.data.frame(d[[4]]),as.data.frame(d[[5]]))
 
 ##ideally we would like adply so that the result is a dataframe; however the number of categories differs by year, hence the columns in the resulting data frame are not of same length
 @
 
-%\Sexpr{res[[1]][1]},\Sexpr{res[[1]][2]},\Sexpr{res[[1]][3]}
+
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{llllll}
+\hline
+Crop Code & 2003 & 2004 & 2005 & 2006 & 2007 \\ 
+\hline
+min &  \Sexpr{d[1,1]} & \Sexpr{d[1,2]}& \Sexpr{d[1,3]}&\Sexpr{d[1,4]} & \Sexpr{d[1,5]}& \Sexpr{d[1,6]}& \Sexpr{d[1,7]}\\ 
+1stq &  \Sexpr{d[2,1]}  & \Sexpr{d[2,2]} & \Sexpr{d[2,3]} & \Sexpr{d[2,4]} & \Sexpr{d[2,5]} & \Sexpr{d[2,6]} & \Sexpr{d[2,7]}\\ 
+median & \Sexpr{d[3,1]}  & \Sexpr{d[3,2]} & \Sexpr{d[3,3]} & \Sexpr{d[3,4]}& \Sexpr{d[3,5]} & \Sexpr{d[3,6]} & \Sexpr{d[3,7]}\\ 
+mean   & \Sexpr{d[4,1]}  & \Sexpr{d[4,2]} & \Sexpr{d[4,3]} & \Sexpr{d[4,4]} & \Sexpr{d[4,5]} & \Sexpr{d[4,6]}& \Sexpr{d[4,7]}\\ 
+3rdq  &  \Sexpr{d[5,1]}  & \Sexpr{d[5,2]} & \Sexpr{d[5,3]} & \Sexpr{d[5,4]} & \Sexpr{d[5,5]} & \Sexpr{d[5,6]}& \Sexpr{d[5,7]}\\ 
+max   &   \Sexpr{d[6,1]}  & \Sexpr{d[6,2]} & \Sexpr{d[6,3]} & \Sexpr{d[6,4]}& \Sexpr{d[6,5]} & \Sexpr{d[6,6]}& \Sexpr{d[6,7]}\\ 
+\hline
+\hline
+sd &  \Sexpr{d[7,1]} $ & \Sexpr{d[7,2]} & \Sexpr{d[7,3]} & \Sexpr{d[7,4]} & \Sexpr{d[7,5]} & \Sexpr{d[7,6]}& \Sexpr{d[7,7]}\\ 
+se &  \Sexpr{d[8,1]} $ & \Sexpr{d[8,2]} & \Sexpr{d[8,3]} & \Sexpr{d[8,4]} & \Sexpr{d[8,5]} & \Sexpr{d[8,6]}& \Sexpr{d[8,7]}\\ 
+\hline
+\end{tabular}
+\caption{Estimates for the area effects variance component, $\sigma_b^2$} 
+\end{center}
+\end{table}
+
+
 
 \section{Conclusions/ Future work}
 The final comments would be on the changes in crop categories over this time period and the effect on the future analysis done with the CEAP data. 
